<resources>
    <string name="app_name">OwnerApp</string>
    <string name="easily_listen_anything_you_want_to_read">Easily Listen anything you want to read</string>
    <string name="continue_with_id_password">Continue with ID Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="signout">SignOut</string>

    <string name="todo">TODO</string>

    <string name="sign_out">Sign Out</string>
    <string name="accessGymAnywhere">Access Gym Anywhere</string>
    <string name="hello_blank_fragment">frag</string>
    <string name="branches">Branches</string>
    <string name="settings">Settings</string>
    <string name="add_branch">Add branch</string>

    <string name="view_all_branches">View All Branches</string>
    <string name="add_new_branch">Add New Branch</string>
    <string name="app">App</string>
    <string name="create_your_new_branch">Create your new Branch</string>
    <string name="view_your_current_branches">View your current Branches</string>
    <string name="business">Business</string>
    <string name="view_business_performance">View Business Performance</string>
    <string name="view_stats">View Stats</string>
    <string name="view_specific_branch_performance">View Specific Branch Performance</string>
    <string name="branch_income">Branch Income</string>
    <string name="continuestr">continue</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_id">Branch ID</string>
    <string name="branch_password">Branch Password</string>
    <string name="textview">text</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="description">Description</string>
    <string name="days">Days</string>
    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="duration">Duration</string>
    <string name="create">Create</string>
    <string name="add_new_plan_for_users">Add new Plan for Users</string>
    <string name="add_new_plan">Add New Plan</string>
    <string name="view_active_inactive_users">View Active/Inactive Users</string>
    <string name="view_your_users">View Your Users</string>
    <string name="revenue_from_business">Revenue from Business</string>
    <string name="overall">Overall</string>
    <string name="specific">Specific</string>
    <string name="view_all_plans">View all Plans</string>
    <string name="plans">Plans</string>
    <string name="plan_name">Plan Name</string>
    <string name="normal">Normal</string>
    <string name="rs_4599">Rs.4599</string>
    <string name="fees">Fees</string>
    <string name="_30">30</string>
    <string name="revenue">revenue</string>
    <string name="revenue_this_month">Revenue This Month</string>
    <string name="revenue_today">Revenue Today</string>
    <string name="users_till_now">Users Till Now</string>
    <string name="users">users</string>
    <string name="refresh">Refresh</string>
    <string name="products">Products</string>
    <string name="view_all_products">View All Products</string>
    <string name="product_name">Product Name</string>
    <string name="orders">Orders</string>
    <string name="add_product_category">Add Product Category</string>
    <string name="add_new_product_category">Add New Product Category</string>
    <string name="product_price">Product Price</string>
    <string name="pick_images">Pick Images</string>
    <string name="next">next</string>
    <string name="category">Category</string>
    <string name="enter_product_category">Enter Product Category</string>
    <string name="add">Add</string>
    <string name="has_flavours">Has Flavours</string>
    <string name="add_flavour">Add Flavour</string>
    <string name="delete">Delete</string>
    <string name="product_description">Product Description</string>
    <string name="done">Done</string>
    <string name="products_sold_this_month">Products Sold This Month</string>
    <string name="yes">Yes</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="productdeletemsg">Click Accept to Delete Product</string>
    <string name="productupdatemsg">Click Accept to update product?</string>
    <string name="view_all_orders_from_customers">View All Orders from Customers</string>
    <string name="product_dashboard">Product Dashboard</string>
    <string name="modifications">Modifications</string>
    <string name="revenue_from_products">Revenue From Products</string>
    <string name="user_gained_this_month">User Gained This Month</string>
    <string name="quantity">Quantity</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer">Customer</string>
    <string name="view_full_details">View Full Details</string>
    <string name="status">Status</string>

    <string-array name="durationType">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>


</resources>